# gemini-cli-skills

./: README.rst
.gemini/skills/python-project-builder/: SKILL.md
.gemini/skills/python-project-builder-interactive/: SKILL.md
.gemini/skills/python-project-builder-interactive/references/: product-requirements.md  testing.md
.gemini/skills/python-project-builder-tdd/: SKILL.md
.gemini/skills/python-project-builder-tdd/assets/project_template/: Makefile  README.md
.gemini/skills/python-project-builder-tdd/references/: deployment.md  development.md  review.md  testing.md
.gemini/skills/python-project-builder/assets/project_template/: Dockerfile  README.md  pyproject.toml
.gemini/skills/python-project-builder/references/: architecture.md  development.md  review.md  testing.md
