[project]
name = "python-project-template"
version = "0.1.0"
description = "A standard Python project template for uv."
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    # Add common dependencies here, or leave empty for user to add
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.0.270",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.scripts]
app = "src:main" # Assuming a default main entry point